--- a/src/app.css
+++ b/src/app.css
@@ -1,107 +1,51 @@
-@import '@fontsource/fira-mono';
+@import '$root/reset.css';
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
-	--pure-white: #ffffff;
-	--primary-color: #b9c6d2;
-	--secondary-color: #d0dde9;
-	--tertiary-color: #edf0f8;
-	--accent-color: #ff3e00;
-	--heading-color: rgba(0, 0, 0, 0.7);
-	--text-color: #444444;
-	--background-without-opacity: rgba(255, 255, 255, 0.7);
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
+	--green-ryb: hsla(95, 45%, 44%, 1);
+	--forest-green-traditional: hsla(121, 84%, 13%, 1);
+	--xiketic: hsla(305, 73%, 6%, 1);
+	--safety-orange: hsla(28, 99%, 49%, 1);
+	--cyan-process: hsla(198, 78%, 64%, 1);
+
+	--primary-bg: var(--xiketic);
+	--primary-text: white;
+	--primary-link: hsl(214, 70%, 62%);
+	--primary-link-visited: hsl(266, 70%, 70%);
+
+	--secondary-bg: var(--green-ryb);
+	--secondary-text: black;
+
+	--standard-border: var(--forest-green-traditional);
+
+	--warning-border: var(--safety-orange);
+
+	--info-border: var(--cyan-process);
+	
+	font-family: sans-serif;
 }
 
-body {
-	min-height: 100vh;
-	margin: 0;
-	background-color: var(--primary-color);
-	background: linear-gradient(
-		180deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 10.45%,
-		var(--tertiary-color) 41.35%
-	);
+.panel-primary {
+	background-color: var(--primary-bg);
+	color: var(--primary-text);
 }
 
-body::before {
-	content: '';
-	width: 80vw;
-	height: 100vh;
-	position: absolute;
-	top: 0;
-	left: 10vw;
-	z-index: -1;
-	background: radial-gradient(
-		50% 50% at 50% 50%,
-		var(--pure-white) 0%,
-		rgba(255, 255, 255, 0) 100%
-	);
-	opacity: 0.05;
+.panel-primary a {
+	color: var(--primary-link);
 }
 
-#svelte {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
+.panel-primary a:visited {
+	color: var(--primary-link-visited);
 }
 
-h1,
-h2,
-p {
-	font-weight: 400;
-	color: var(--heading-color);
+.panel-secondary {
+	background-color: var(--secondary-bg);
+	color: var(--secondary-text);
 }
 
-p {
-	line-height: 1.5;
+.panel-secondary a {
+	color: revert;
 }
 
-a {
-	color: var(--accent-color);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
-
-h2 {
-	font-size: 1rem;
-}
-
-pre {
-	font-size: 16px;
-	font-family: var(--font-mono);
-	background-color: rgba(255, 255, 255, 0.45);
-	border-radius: 3px;
-	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-	padding: 0.5em;
-	overflow-x: auto;
-	color: var(--text-color);
-}
-
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-	outline: none;
-}
-
-@media (min-width: 720px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+.panel-secondary a:visited {
+	color: revert;
 }
